# polysolvlib

./: pyproject.toml
.github/workflows/: test_florp.yml
docs/source/: conf.py  index.rst
polysolve/: __init__.py  solver.py
polysolvlib.egg-info/: PKG-INFO  SOURCES.txt
